--- a/main.html
+++ b/main.html
@@ -11,7 +11,18 @@
   <body>
     <h2>Infinite Scroll</h2>
     <main>
-      <ol id="infi-list"></ol>
+      <ol id="infi-list">
+		  <li>Item1</li>
+		  <li>Item2</li>
+		  <li>Item3</li>
+		  <li>Item4</li>
+		  <li>Item5</li>
+		  <li>Item6</li>
+		  <li>Item7</li>
+		  <li>Item8</li>
+		  <li>Item9</li>
+		  <li>Item10</li>
+	  </ol>
     </main>
     <script src="./script.js"></script>
   </body>
